# landru

./: Cargo.toml  Readme.md
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml
core/src/: entity.rs  io.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs  room.rs
