[package]
name = "landru"
version = "0.1.0"
authors = ["diericx <zacharyholland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["client", "server", "core"]

[[bin]]
name = "server"
path = "server/src/main.rs"

[dependencies]
