[package]
name = "server"
version = "0.1.0"
authors = ["diericx <zacharyholland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
# core = { path = "../core"}